--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="utf-8">
     <meta name="referrer" content="never" />
     <title>Vue.js Poster Shop</title>
@@ -12,28 +13,77 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="public/style.css">
-</head>
-<body>
-<div id="app">
-    <div class="header">
+  </head>
+
+  <body>
+    <div id="app">
+      <div class="header">
         <h1>Vue.js Poster Store</h1>
-    </div>
-    <div class="main">
+        <form class="searchbar" v-on:submit.prevent="onSubmit">
+          <input v-model="newSearch" placeholder="Search for posters" />
+          <input type="submit" class="btn" value="Search" /></form>
+      </div>
+      <div class="main">
         <div class="products">
-            <p>Products go here.</p>
+          <div v-if="loading">
+            Loading...
+          </div>
+          <div class="search-results" v-else>
+            Found {{items.length}} results for search term {{lastSearch}}.
+          </div>
+          <div class="product" v-for="(item, index) in items">
+            <div>
+              <div class="product-image">
+                <img v-bind:src="item.link" />
+              </div>
+            </div>
+            <div>
+              <h4 class="product-title"> {{item.title}}</h4>
+              <p>
+                Price: {{price | currency}}
+              </p>
+              <button class="add-to-cart btn" v-on:click="addItem(index)"> Add to cart </button>
+            </div>
+          </div>
         </div>
         <div class="cart">
-            <h2>Shopping Cart</h2>
-            <div>
-                No items in the cart.
+          <h2>Shopping Cart</h2>
+          <ul>
+            <li class="cart-item" v-for="item in cart">
+              <div class="item-title">
+                {{item.title}}
+              </div>
+              <span class="item-qty">
+                {{item.price | currency}} X {{item.qty}}
+              </span>
+              <button class="btn" v-on:click="inc(item)">+</button>
+              <button class="btn" v-on:click="dec(item)">-</button>
+            </li>
+          </ul>
+          <div>
+            <transition name="fade">
+              <div v-if="cart.length">
+                <div>
+                  Total: {{total | currency }}
+                </div>
+              </div>
+            </transition>
+            <div v-else class="empty-cart">
+              No Items in the cart.
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<!-- Scripts -->
-<script src="/reload/reload.js"></script>
-<script type="text/javascript" src="public/script.js"></script>
+    <!-- Scripts -->
+    <script src="/reload/reload.js"></script>
+    <script src="node_modules/vue/dist/vue.js"></script>
+    <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+    <script type="text/javascript" src="public/script.js"></script>
 
-</body>
+
+
+  </body>
+
 </html>
