--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <div id="app">
+    <div id="app" v-cloak>
       <div class="header">
         <h1>Vue.js Poster Store</h1>
         <form class="searchbar" v-on:submit.prevent="onSubmit">
@@ -29,7 +29,7 @@
             Loading...
           </div>
           <div class="search-results" v-else>
-            Found {{items.length}} results for search term {{lastSearch}}.
+            Found {{results.length}} results for search term {{lastSearch}}.
           </div>
           <div class="product" v-for="(item, index) in items">
             <div>
@@ -45,11 +45,22 @@
               <button class="add-to-cart btn" v-on:click="addItem(index)"> Add to cart </button>
             </div>
           </div>
+
+          <div id="product-list-bottom">
+            <div v-if="noMoreItems">
+              No more items.
+            </div>
+          </div>
+
         </div>
+
+
+
         <div class="cart">
           <h2>Shopping Cart</h2>
-          <ul>
-            <li class="cart-item" v-for="item in cart">
+
+          <transition-group name="fade" tag="ul">
+            <li class="cart-item" v-for="item in cart" v-bind:key="item.id">
               <div class="item-title">
                 {{item.title}}
               </div>
@@ -59,7 +70,7 @@
               <button class="btn" v-on:click="inc(item)">+</button>
               <button class="btn" v-on:click="dec(item)">-</button>
             </li>
-          </ul>
+          </transition-group>
           <div>
             <transition name="fade">
               <div v-if="cart.length">
@@ -68,7 +79,7 @@
                 </div>
               </div>
             </transition>
-            <div v-else class="empty-cart">
+            <div v-if="cart.length === 0" class="empty-cart">
               No Items in the cart.
             </div>
           </div>
@@ -80,6 +91,7 @@
     <script src="/reload/reload.js"></script>
     <script src="node_modules/vue/dist/vue.js"></script>
     <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+    <script src="node_modules/scrollmonitor/scrollmonitor.js"></script>
     <script type="text/javascript" src="public/script.js"></script>
 
 
